--- a/apps/call-app/package.json
+++ b/apps/call-app/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "client",
+  "name": "call-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/axios": "^0.14.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
